# network_helper

./: .gitignore  __init__.py  app.py  main.py  pyproject.toml  settings.yaml
cache/community_reporting/: chat_create_community_report_0056ef73cca720070d982e57230838a9924f68db240ee372ddcb898c4264f020_v2  chat_create_community_report_01a1f8a3f083dd0dbffff78c32c17f54e7ec2f47e8e38ff42ba7ca842582b5a2_v2  chat_create_community_report_0255f26061fd2758094d2c3d90a12dfe5ef35f5a27e81e26746bcd9944e7311b_v2  chat_create_community_report_02be425349ace841b91af7520381e55505c61332ca9fc016d1174ae3fa1a599c_v2  chat_create_community_report_04803ae30102e8556cd628b0248f012818438a5eecbd87e2844ca7284b200a12_v2  chat_create_community_report_049414004cb5d2738f94decadeae1a2a0818d6c938700b92a140aac1c491ac14_v2  chat_create_community_report_05b7c6f277c55176d2249aa601dd3a38b7bec50f6c3dc037acf6eef12235b6ca_v2  (+191 more)
create_nobase/: __init__.py  __main__.py  main.py
input/: meraki_api_doc.txt
mytools/: __init__.py  create_network.py  create_ssid.py  list_clients.py  list_device_clients.py  list_org_ports.py  list_ssid.py  list_ssids.py  swe_man.py
nobase/: create_nobase.py  read_nobase.py
output/: communities.parquet  community_reports.parquet  documents.parquet  embeddings.community.full_content.parquet  embeddings.text_unit.text.parquet  entities.parquet  graph.graphml  relationships.parquet  stats.json  text_units.parquet
prompts/: community_report_graph.txt  extract_graph.txt  summarize_descriptions.txt
read_nobase/: main.py
(+1646 files in other folders)
